Fri Apr 22 19:05:19 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/ACE.cpp (strnew):
          Removed null check, ACE_NEW_RETURN already does that

Fri Apr 22 15:19:29 UTC 2011  Steve Huston  <shuston@riverace.com>

        * include/makeinclude/platform_aix_ibm.GNU: Add support for XL C++ 11.

Fri Apr 22 12:43:18 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * protocols/tests/HTBP/HTBP_Config.conf:
        * protocols/tests/HTBP/Reactor_Tests/inside.conf:
        * tests/Service_Config_Test.WCHAR_T.conf:
          Fuzz: Added $Id string

Fri Apr 22 11:16:57 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * rpmbuild/ace-tao.spec:
          Removed autoconf support

Fri Apr 22 07:25:57 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * ace/MMAP_Memory_Pool.cpp:
        * ace/OS_NS_stdlib.cpp:
          Layout changes

        * Kokyu/tests/DSRT_MIF/svc.conf:
        * apps/Gateway/Gateway/svc.conf:
        * apps/Gateway/Peer/svc.conf:
        * apps/JAWS/server/svc.conf:
        * apps/JAWS3/jaws3/jaws.conf:
        * apps/JAWS3/small/jaws.conf:
        * apps/JAWS3/small/svc.conf:
        * examples/APG/Logging/client.conf:
        * examples/APG/Logging/logging_strategy.conf:
        * examples/APG/Logging/server.conf:
        * examples/APG/Naming/svc.conf:
        * examples/APG/Svc_Config/svc.conf.dynamic:
        * examples/APG/Svc_Config/svc.conf.static:
        * examples/ASX/CCM_App/svc.conf:
        * examples/C++NPv2/svc.conf:
        * examples/Service_Configurator/IPC-tests/server/svc.conf:
        * examples/Service_Configurator/Misc/svc.conf1:
        * examples/Service_Configurator/Misc/svc.conf2:
        * netsvcs/clients/Naming/Client/svc.conf:
        * netsvcs/clients/Naming/Client/svc2.conf:
        * netsvcs/servers/svc.conf:
        * performance-tests/Synch-Benchmarks/svcconf/perf_t1.conf:
        * performance-tests/Synch-Benchmarks/svcconf/perf_t16.conf: