@@ -1,3 +1,8 @@
+Sat Apr 23 12:31:28 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ace/Stream.cpp:
+          Fixed incorrect ACE_NEW_RETURN macro
+
 Fri Apr 22 19:05:19 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ace/ACE.cpp (strnew):
